# MightyPPL

./: .gitignore  .gitmodules  2.mitl  4.mitl  4.patch  5.mitl  5.patch  6.patch  7.patch  AtomCmp.h  CMakeLists.txt  CountFn.cpp  CountFnDual.cpp  CountGn.cpp  CountHn.cpp  CountOn.cpp  CountOnDual.cpp  EnumAtoms.h  Finally.cpp  FixpointwithBDDEdges.cpp  FixpointwithBDDEdges.h  Globally.cpp  Historically.cpp  MightyL.cpp  MightyL.h  MightyPPL.cpp  MightyPPL.h  MightyPPL_lamp.cpp  MightyPPL_new_4.cpp  MightyPPL_new_5.cpp  MightyPPL_new_6.cpp  MightyPPL_new_7.cpp  MightyPPL_new_food.cpp  MightyPPL_new_lamp.cpp  MightyPPL_new_original.cpp  MightyPPL_original.cpp  Mitl.g4  MitlAtomNumberingVisitor.cpp  MitlAtomNumberingVisitor.h  MitlBuildTAVisitor.cpp  (+36 more)
cmake/: ExternalAntlr4Cpp.cmake
testcases/: 3458-m.tck  f2.mitl  new-unsat.mitl  new.mitl  new2-unsat.mitl  new3-unsat.mitl  p1top4.mitl  phi1.mitl  pin1.mitl  redundant.mitl  run-avoidance.sh  run-general-ltsmin.sh  run-general.sh  run-hoxha-ltsmin.sh  run-hoxha.sh  run-lamp.sh  run-para-past.sh  run-para-unsat.sh  run-para-uppaal.sh  run-para.sh  run-pinwheel-ltsmin.sh  run-timed-lamp.sh  test.mitl  vacuity.mitl
testcases/MightyL/: A-5-12.mitl  E-5-12.mitl  R-5-12.mitl  U-5-12.mitl  theta3-100-1000.mitl  theta4-100-1000.mitl
testcases/TACAS_testcases/: avoidance-size.txt  avoidance.txt  hoxha-size.txt  hoxha.txt  para-past-size.txt  para-past-unsat.txt  para-past.txt  para-unsat.txt  run-avoidance.sh  run-hoxha.sh  run-para-past.sh  run-para-unsat.sh  run-para.sh
testcases/TACAS_testcases/avoidance/: 1-comp.tck  1.tck  2-comp.tck  2.tck  3-comp.tck  3.tck  4-comp.tck  4.mitl  4.tck
testcases/TACAS_testcases/hoxha/: 1-comp.tck  1.ltl  1.mitl  1.tck  1p-comp.tck  1p.tck  2-comp.tck  2.ltl  2.tck  2p-comp.tck  2p.mitl  2p.tck  3.ltl  3.tck  3p-comp.tck  3p.mitl  3p.tck  4-comp.tck  4.ltl  4.mitl  4.tck  4p-comp.tck  4p.tck  5-comp.tck  5.ltl  5.mitl  5.tck  5p.tck
testcases/TACAS_testcases/parametric/: F-2-2i.mitl  F-3-2i.mitl  G-3-02.mitl  G-3-2i.mitl  G-4-02.mitl  G-4-2i.mitl  U-2-02.mitl  U-2-2i.mitl  U-4-02.mitl
testcases/TACAS_testcases/parametric/past/: p-F-2-02.mitl  p-F-4-02.mitl  p-G-2-02.mitl  p-G-2-2i.mitl  p-G-4-02.mitl  p-G-4-2i.mitl  p-R-2-02.mitl  p-U-2-2i.mitl  p-U-3-02.mitl  p-U-3-2i.mitl  p-U-4-02.mitl
testcases/TACAS_testcases/parametric/unsat/: X-2-2i.mitl  X-3-02.mitl  X-3-2i.mitl  X-4-2i.mitl  p-X-4-02.mitl  p-X-4-2i.mitl
testcases/acacia/: 3.mitl  4.mitl  5.mitl  6.mitl  9.mitl
testcases/avoidance/: 1.mitl  2.mitl  3.mitl
testcases/general/: F-12.mitl  F-1920.mitl  F-2-12.mitl  F-3-12.ltl  F-3-12.mitl  F-3940.mitl  F-45.ltl  F-45.mitl  F-910.mitl  G-3-12.mitl  G-4-12.mitl  R-3-12.mitl  R-4-12.mitl  R-5-12.mitl  U-3-12.mitl  U-4-12.mitl  X-1-12.ltl  X-1-12.mitl  X-2-12.ltl  X-2-12.mitl  theta-3-100_1000.ltl  theta-3-100_1000.mitl  theta-4-100_1000.mitl  theta-5-100_1000.mitl
testcases/hoxha/: 1.ltl  1p.mitl  2.ltl  2.mitl  3.ltl  3.mitl  4.ltl  4p.mitl  5.ltl  5p.mitl
testcases/newhoxha2/: 1.mitl  2.mitl  3.mitl  4.mitl  5.mitl  6.mitl
testcases/para/: F-4-2i.q  F-4-2i.xml  G-4-2i.q  G-4-2i.xml  U-4-02.q  U-4-02.xml  X-2-02.xml  X-2-2i.xml
testcases/parametric/: F-2-02.mitl  F-3-02.mitl  F-4-02.mitl  F-4-2i.mitl  G-2-02.mitl  G-2-2i.mitl  R-2-02.mitl  R-2-2i.mitl  R-3-02.mitl  R-3-2i.mitl  R-4-02.mitl  R-4-2i.mitl  U-3-02.mitl  U-3-2i.mitl  U-4-2i.mitl  U-4-2i.xml  X-2-02.q
testcases/parametric/past/: p-F-2-2i.mitl  p-F-3-02.mitl  p-F-3-2i.mitl  p-F-4-2i.mitl  p-G-3-02.mitl  p-G-3-2i.mitl  p-R-2-2i.mitl  p-R-3-02.mitl  p-R-3-2i.mitl  p-R-4-02.mitl  p-R-4-2i.mitl  p-U-2-02.mitl  p-U-4-2i.mitl
testcases/parametric/unsat/: X-2-02.mitl  X-4-02.mitl  p-X-2-02.mitl  p-X-2-2i.mitl  p-X-3-02.mitl  p-X-3-2i.mitl
testcases/pinwheel/: 234.mitl  2478.mitl  2488.mitl  2_7_9_10_16.mitl  2_7_9_10_16.tck  2_7_9_11_16.mitl  2_7_9_11_17.mitl  2_7_9_9_16.mitl  2_7_9_9_16.xml.ltl  345.mitl  3457.mitl  3457.xml.ltl  3458.mitl  3458.xml  3_7_8_8_9_10.mitl  3_7_8_8_9_10.tck  3_7_8_8_9_11.mitl  3_7_8_8_9_11.xml.ltl  4_6_8_9_9_9_15.tck  4_6_8_9_9_9_15.xml.ltl  4_6_8_9_9_9_16.mitl  4_6_8_9_9_9_16.tck  5_5_8_9_9_9_11.tck  5_5_8_9_9_9_12.mitl  6_7_7_7_8_8_10.tck  6_7_7_7_8_8_11.tck
testcases/pinwheel/pinwheel-new/: 2_7_9_10_16.mitl  2_7_9_10_16.xml  2_7_9_9_16.tck  2_7_9_9_16.xml  3457.mitl  3457.tck  3457.xml  3458.tck  3_7_8_8_9_10.xml  3_7_8_8_9_11.mitl  3_7_8_8_9_11.tck  3_7_8_8_9_11.xml  4_6_8_9_9_9_15.mitl  5_5_8_9_9_9_11.mitl  5_5_8_9_9_9_12.tck  6_7_7_7_8_8_10.mitl  6_7_7_7_8_8_11.mitl
testcases/timedlamp/: 1-comp.tck  1.mitl  1.tck  2-comp.tck  2.mitl  2.tck  3-comp.tck  3.mitl  3.tck  4-comp.tck  4.mitl  4.tck  MightyPPL.cpp
